fixed contrast color

--- a/styles/base.css
+++ b/styles/base.css
@@ -20,7 +20,7 @@ h1 {
 }
 
 .highlight {
-    color: white;
+    color: #000080;
 }
 
 nav {
